ApexWorkbook/src/objects/ReviewResultsOptions__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Included or not in picklist values.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fix_Color__c</fullName>
        <inlineHelpText>Color-coded level of criticality for the issue found.</inlineHelpText>
        <label>Fix Color</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fix_Level__c</fullName>
        <inlineHelpText>Level of criticality for the issue found.</inlineHelpText>
        <label>Fix Level</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <inlineHelpText>Type of issue found.</inlineHelpText>
        <label>Issue Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugg_Remedy2__c</fullName>
        <inlineHelpText>Suggested steps for remediation.</inlineHelpText>
        <label>Suggested Remediation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugg_Remedy3__c</fullName>
        <inlineHelpText>Suggested steps for remediation.</inlineHelpText>
        <label>Suggested Remediation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugg_Remedy4__c</fullName>
        <inlineHelpText>Suggested steps for remediation.</inlineHelpText>
        <label>Suggested Remediation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Review Results Option</label>
    <pluralLabel>Review Results Options</pluralLabel>
</CustomObject>